// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe mostrar el snapshot correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="l3vRlt8kty8KKeHni"
      key="l3vRlt8kty8KKeHni"
      title="one punch GIF by Adult Swim"
      url="https://media0.giphy.com/media/l3vRlt8kty8KKeHni/giphy.gif?cid=5bcd87eeumlqtq22jd83jf8g5hd086kdi3ko4yz07fxyzsqz&rid=giphy.gif&ct=g"
    />
    <GifGridItem
      id="l3vRlt8kty8KKeHhui"
      key="l3vRlt8kty8KKeHhui"
      title="one punch GIF by Adult Swim"
      url="https://media0.giphy.com/media/l3vRlt8kty8KKeHni/giphy.gif?cid=5bcd87eeumlqtq22jd83jf8g5hd086kdi3ko4yz07fxyzsqz&rid=giphy.gif&ct=g"
    />
  </div>
</Fragment>
`;
